<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".FavoriteListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_nav_bar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/NoQuotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:id="@+id/NoQuotes2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/no_quotes_found"
            android:gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/NoQuotesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NoQuotes2"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/no_favorite"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

    </RelativeLayout>

</RelativeLayout>