<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_layout"
    android:layout_width="300.0dip"
    android:layout_height="fill_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150.0dip"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/header" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginStart="8dp"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_liked_quotes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_favorite_red"
                    android:tint="@color/grey" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/liked_quotes"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_todays_quote"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_menu_quote"
                    android:tint="@color/grey" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/quote_of_the_day"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="#ffeeeeee" />

            <LinearLayout
                android:id="@+id/ll_sounds"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip"
                android:visibility="gone">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_favorite_red"
                    android:tint="@color/grey" />

                <TextView
                    android:id="@+id/tv_sounds"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/setting"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_faqs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_menu_about"
                    android:tint="@color/grey" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/about_us"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_contact_us"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip"
                android:visibility="gone">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_menu_email"
                    android:tint="@color/grey" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/contact_us"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_rate_app"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip"
                android:visibility="gone">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_menu_star"
                    android:tint="@color/grey" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/give_star"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_share_app"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip"
                android:visibility="gone">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:tint="@color/grey"
                    app:srcCompat="@drawable/ic_menu_share"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/share_app"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_like_fb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    app:srcCompat="@drawable/ic_menu_facebook" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/like_on_facebook"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_follow_insta"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_menu_instagram" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/follow_on_instagram"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_privacy_policy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10.0dip"
                android:paddingBottom="10.0dip"
                android:visibility="gone">

                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:padding="2.0dip"
                    android:tint="@color/grey"
                    app:srcCompat="@drawable/ic_menu_flag"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/lightBlack" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/lightBlack"
        android:textSize="12.0sp" />

</LinearLayout>