<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_close_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000"
    android:gravity="center"
    android:tag="layout/dialog_layout_exit_app_0">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="5.0dip">

        <LinearLayout
            android:id="@+id/layout_dialog_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_alert"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:fontFamily="@font/rundschriftpro"
                android:gravity="center"
                android:text="@string/exit"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/lightBlack" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="20.0dip"
                android:gravity="center"
                android:text="@string/do_you_want_to_exit"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ff888888" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="25.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginBottom="20.0dip"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_no"
                    android:layout_width="0.0dip"
                    android:layout_height="35.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_weight="1.0"
                    app:cardBackgroundColor="#ffeeeeee"
                    app:cardCornerRadius="5.0dip">

                    <TextView
                        android:id="@+id/tv_no"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:fontFamily="@font/rundschriftpro"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/lightBlack" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_yes"
                    android:layout_width="0.0dip"
                    android:layout_height="35.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_weight="1.0"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="5.0dip">

                    <TextView
                        android:id="@+id/tv_yes"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:fontFamily="@font/rundschriftpro"
                        android:gravity="center"
                        android:text="@string/yes"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@android:color/white" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frame_ad_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ffdddddd"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/layout_ad_warning"

                    android:layout_width="fill_parent"
                    android:layout_height="270.0dip"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rundschriftpro"
                        android:text="@string/ad"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/lightBlack" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/admob_native_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dip"
                    android:background="@android:color/white">

                </FrameLayout>

            </FrameLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
